--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		$(document).ready(function(){
 			$(".window").mwin({
 				open_button		: 'a.win',
-				close_button	: 'a.close'
+				close_button		: 'a.close'
 			});
 		});
 	</script>
@@ -28,9 +28,9 @@
 </head>
 
 <!-- BEGIN body -->
-<body>
+<body style="height:3000px;">
 
-	<a href="#" class='win'>WIN</a>
+	<a href="#" class='win'>open window</a>
 	
 	<div class="window">
 		<p>Long Long Text...</p>
