fixed display errors

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
 			$(".window").mwin({
-				open_button		: 'a.win',
-				close_button		: 'a.close'
+				open_button		: 'a.win'
 			});
 		});
 	</script>
@@ -28,7 +27,7 @@
 </head>
 
 <!-- BEGIN body -->
-<body style="height:3000px;">
+<body>
 
 	<a href="#" class='win'>open window</a>
 	
@@ -36,7 +35,6 @@
 		<p>Long Long Text...</p>
 		<p>Long Long Text...</p>
 		<p>Long Long Text...</p>
-		<a class="close" href="#">close</a>
 	</div>
 	
 <!-- END body -->
