--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
 	<a href="#" class='win'>open window</a>
 	
 	<div class="window">
-		<p>Long Long Text...</p>
-		<p>Long Long Text...</p>
-		<p>Long Long Text...</p>
+		<div class='content'>
+			<p>Long Long Text...</p>
+			<p>Long Long Text...</p>
+			<p>Long Long Text...</p>
+		</div>
 	</div>
 	
 <!-- END body -->
